# TIFO-project

./: .clang-format  .gitignore  CMakeLists.txt  README.md  subject.md
Fiji/macros/: make3DMontage.ijm  registrationOutput.ijm  transform_diff.ijm
src/: CMakeLists.txt  main.cc
src/image/: CMakeLists.txt  image.cc  image.hh
src/interpolator/: CMakeLists.txt  interpolation_method.hh  interpolator.hh  nearest_neighbor_interpolator.cc  nearest_neighbor_interpolator.hh  trilinear_interpolator.cc  trilinear_interpolator.hh
src/math/: CMakeLists.txt  matrix3f.cc  matrix3f.hh  matrix4f.cc  matrix4f.hh  vector3f.cc  vector3f.hh
src/metric/: CMakeLists.txt  mean_squared_error_metric.cc  mean_squared_error_metric.hh  metric.hh
src/optimizer/: CMakeLists.txt  optimizer.hh  regular_gradient_descent_optimizer.cc  regular_gradient_descent_optimizer.hh
src/transform/: CMakeLists.txt  rigid_transform.cc  rigid_transform.hh  transform.hh
test/: benchmark.sh  benchmarkRegistration.sh
